<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/view_grid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/layout_days"
        android:layout_marginBottom="12dp"
        android:background="@color/border"
        android:horizontalSpacing="2dp"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        android:numColumns="5"
        android:padding="2dp"
        android:verticalSpacing="2dp"
        android:clickable="false"
        android:focusable="false"
        />

    <LinearLayout
        android:id="@+id/layout_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/layout_hours"
        android:orientation="horizontal"
        android:clickable="false"
        android:focusable="false">

        <TextView
            android:id="@+id/txt_day0"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grid_days_background"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/mo"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_day1"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grid_days_background"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/tue"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_day2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grid_days_background"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_day3"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grid_days_background"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/thu"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_day4"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grid_days_background"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/fri"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/widget_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
</RelativeLayout>