<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridView
        android:id="@+id/view_grid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/border"
        android:horizontalSpacing="2dp"
        android:numColumns="5"
        android:padding="2dp"
        android:verticalSpacing="2dp"
        android:layout_centerVertical="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layout_hours"
        app:layout_constraintTop_toBottomOf="@+id/layout_days" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view_grid"
        app:layout_constraintTop_toBottomOf="@+id/txt_title">

        <TextView
            android:id="@+id/txt_Mo"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grid_days_background"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/mo"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grid_days_background"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/tue"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grid_days_background"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grid_days_background"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/thu"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/grid_days_background"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/fri"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_hours"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/view_grid"
        app:layout_constraintEnd_toStartOf="@+id/view_grid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_days">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@drawable/grid_hours_background"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="08:00\n-\n09:30"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@drawable/grid_hours_background"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="09:50\n-\n11:20"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@drawable/grid_hours_background"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="11:30\n-\n13:00"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@drawable/grid_hours_background"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="14:00\n-\n15:30"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@drawable/grid_hours_background"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="15:40\n-\n17:20"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@+id/layout_days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>