<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="user"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_avatar" />

   <!-- <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:src="@drawable/ic_login_name" />-->
    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_avatar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/round_image_view"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_newpwdconfirm"
        android:layout_width="153dp"
        android:layout_height="36dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/gradient_shadow"
        android:drawableTint="@color/textLight"
        android:hint="@string/confirm"
        android:inputType="textPassword"
        android:paddingLeft="4dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/textLight"
        android:textColorHint="@color/textLight"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_newpwd2"
        android:layout_width="153dp"
        android:layout_height="36dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/gradient_shadow"
        android:drawableTint="@color/textLight"
        android:hint="@string/newTxt"
        android:inputType="textPassword"
        android:paddingLeft="4dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/textLight"
        android:textColorHint="@color/textLight"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_newpwdconfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_oldpwd"
        android:layout_width="153dp"
        android:layout_height="36dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/gradient_shadow"
        android:drawableLeft="@drawable/ic_passwd_close"
        android:drawableTint="@color/textLight"
        android:hint="@string/old"
        android:inputType="textPassword"
        android:paddingLeft="4dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/textLight"
        android:textColorHint="@color/textLight"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_newpwd2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="97dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorAccent"
        android:focusableInTouchMode="false"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/please_confirm_your_old_password"
        app:layout_constraintBottom_toTopOf="@+id/edit_oldpwd"
        app:layout_constraintEnd_toEndOf="@+id/edit_oldpwd"
        app:layout_constraintStart_toStartOf="@+id/edit_oldpwd" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/change_your_password"
        app:layout_constraintBottom_toTopOf="@+id/edit_newpwd2"
        app:layout_constraintEnd_toEndOf="@+id/edit_newpwd2"
        app:layout_constraintStart_toStartOf="@+id/edit_newpwd2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/click_to_change_avatar"
        app:layout_constraintEnd_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

    <Button
        android:id="@+id/btn_delete_avatar"
        android:layout_width="27dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/ic_delete"
        android:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />
</android.support.constraint.ConstraintLayout>