<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/options"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

   <!-- <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:src="@drawable/ic_login_name" />-->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right|center"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title">

        <Switch
            android:id="@+id/toggle_autologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auto_login"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="402dp" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <Switch
            android:id="@+id/toggle_notifylesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notifylesson"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="402dp" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <Switch
            android:id="@+id/toggle_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Reset Database"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="402dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="82dp"
                android:layout_height="55dp"
                android:layout_weight="0"
                android:text="@string/home_location" />

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Home"
                android:textAlignment="center"
                android:textColor="@color/cast_intro_overlay_background_color" />

            <Button
                android:id="@+id/btn_picker"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="0"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_pick_location"

                android:text="Pick" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>